# ACTI-Model

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ctlcell.cpp  ctlcell.h  mainview.cpp  paretodist.hpp  scenario.cpp  scenario.h  tumorcell.cpp  tumorcell.h  vcell.hpp
